--- a/app/src/main/res/layout/business_onboarding_open_new_account.xml
+++ b/app/src/main/res/layout/business_onboarding_open_new_account.xml
@@ -76,11 +76,13 @@
                 android:orientation="vertical">
 
                 <ImageView
+                    android:id="@+id/iv_personal_profile_icon"
                     android:layout_width="@dimen/_54sdp"
                     android:layout_height="@dimen/_54sdp"
                     android:src="@drawable/ic_user" />
 
                 <TextView
+                    android:id="@+id/tv_personal_profile_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_10sdp"
