--- a/app/src/main/res/layout/activity_additional_benifitial_owners.xml
+++ b/app/src/main/res/layout/activity_additional_benifitial_owners.xml
@@ -62,7 +62,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/opensans_bold"
-                android:text="@string/percentage"
+                android:text=" 51% or"
                 android:textColor="@color/primary_green"
                 android:textSize="@dimen/_11ssp" />
         </LinearLayout>
@@ -80,7 +80,7 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@id/buttonCV"
+        android:layout_above="@id/validateCV"
         android:layout_below="@+id/topLL"
         android:scrollbars="none">
 
@@ -169,7 +169,7 @@
     </ScrollView>
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/buttonCV"
+        android:id="@+id/validateCV"
         android:layout_width="match_parent"
         android:layout_height="@dimen/_42sdp"
         android:layout_alignParentBottom="true"
