--- a/app/src/main/res/layout/activity_dba_information.xml
+++ b/app/src/main/res/layout/activity_dba_information.xml
@@ -545,11 +545,11 @@
                 <androidx.cardview.widget.CardView
                     android:id="@+id/dbaNextCV"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="@dimen/_44sdp"
                     android:layout_marginTop="@dimen/_30sdp"
                     android:layout_marginBottom="@dimen/_39sdp"
                     app:cardBackgroundColor="@color/inactive_color"
-                    app:cardCornerRadius="@dimen/_33sdp">
+                    app:cardCornerRadius="@dimen/_22sdp">
 
                     <TextView
                         android:layout_width="match_parent"
