--- a/app/src/main/res/layout/activity_edit_address.xml
+++ b/app/src/main/res/layout/activity_edit_address.xml
@@ -14,10 +14,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginStart="@dimen/_21sdp"
-        android:layout_marginEnd="@dimen/_21sdp"
         android:layout_marginTop="@dimen/_45sdp"
-        android:visibility="gone"
-        android:fitsSystemWindows="true">
+        android:layout_marginEnd="@dimen/_21sdp"
+        android:fitsSystemWindows="true"
+        android:visibility="gone">
 
         <LinearLayout
             android:id="@+id/topLL"
@@ -420,6 +420,7 @@
                             android:id="@+id/countryET"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:autofillHints="creditCardSecurityCode"
                             android:clickable="false"
                             android:cursorVisible="false"
                             android:enabled="false"
@@ -432,8 +433,7 @@
                             android:padding="@dimen/_12sdp"
                             android:text="United States"
                             android:textColor="@color/xdark_gray"
-                            android:textSize="@dimen/_12ssp"
-                            android:autofillHints="creditCardSecurityCode"/>
+                            android:textSize="@dimen/_12ssp" />
 
                     </com.google.android.material.textfield.TextInputLayout>
 
@@ -464,12 +464,14 @@
             </RelativeLayout>
         </ScrollView>
     </RelativeLayout>
+
     <LinearLayout
         android:id="@+id/businessEditAddressLL"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
         android:background="#F2F4F5"
+        android:fitsSystemWindows="true"
+        android:orientation="vertical"
         android:visibility="visible">
 
 
@@ -477,14 +479,14 @@
             android:id="@+id/b_topLL"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingTop="@dimen/_45sdp"
-            android:paddingStart="@dimen/_21sdp"
-            android:paddingBottom="@dimen/_11sdp"
-            android:background="@drawable/bottomradius"
-            android:paddingEnd="@dimen/_21sdp"
-
             android:layout_alignParentTop="true"
-            android:orientation="vertical">
+            android:background="@drawable/bottomradius"
+            android:orientation="vertical"
+            android:paddingStart="@dimen/_21sdp"
+            android:paddingTop="@dimen/_45sdp"
+
+            android:paddingEnd="@dimen/_21sdp"
+            android:paddingBottom="@dimen/_11sdp">
 
             <LinearLayout
                 android:id="@+id/b_backIV"
@@ -518,12 +520,12 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_below="@+id/topLL"
+            android:layout_marginStart="@dimen/_11sdp"
             android:layout_marginTop="@dimen/_11sdp"
+            android:layout_marginEnd="@dimen/_11sdp"
+            android:background="@drawable/round_corner"
             android:paddingTop="@dimen/_19sdp"
             android:scrollbars="none"
-            android:background="@drawable/round_corner"
-            android:layout_marginStart="@dimen/_11sdp"
-            android:layout_marginEnd="@dimen/_11sdp"
             android:visibility="visible">
 
             <LinearLayout
@@ -818,6 +820,7 @@
                             android:id="@+id/b_countryET"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:autofillHints="creditCardSecurityCode"
                             android:clickable="false"
                             android:cursorVisible="false"
                             android:enabled="false"
@@ -830,8 +833,7 @@
                             android:padding="@dimen/_12sdp"
                             android:text="United States"
                             android:textColor="@color/light_gray"
-                            android:textSize="@dimen/_12ssp"
-                            android:autofillHints="creditCardSecurityCode"/>
+                            android:textSize="@dimen/_12ssp" />
 
                     </com.google.android.material.textfield.TextInputLayout>
 
@@ -862,6 +864,5 @@
             </LinearLayout>
         </ScrollView>
     </LinearLayout>
-
 
 </RelativeLayout>
