--- a/app/src/main/res/layout/activity_create_password.xml
+++ b/app/src/main/res/layout/activity_create_password.xml
@@ -275,6 +275,7 @@
                             android:maxLines="1"
                             android:privateImeOptions="disableSticker=true;disableGifKeyboard=true"
                             android:singleLine="true"
+                            android:textCursorDrawable="@drawable/cursor_color"
                             android:textColor="@color/text_color"
                             android:textColorHint="@color/light_gray"
                             android:textSize="@dimen/_12ssp" />
