--- a/app/src/main/res/layout/activity_buy_token_bank_acc_transatn.xml
+++ b/app/src/main/res/layout/activity_buy_token_bank_acc_transatn.xml
@@ -22,7 +22,7 @@
                 android:id="@+id/btbankprevious"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/_21sdp"
+                android:layout_marginStart="@dimen/_21sdp"
                 android:layout_marginTop="@dimen/_45sdp"
                 android:layout_marginBottom="@dimen/_14sdp"
                 android:orientation="horizontal">
@@ -30,7 +30,7 @@
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginRight="@dimen/_10sdp"
+                    android:layout_marginEnd="@dimen/_10sdp"
                     android:src="@drawable/ic_chevron_left" />
             </LinearLayout>
 
@@ -40,7 +40,7 @@
                 android:layout_marginStart="@dimen/_21sdp"
                 android:layout_marginBottom="@dimen/_11sdp"
                 android:fontFamily="@font/opensans_bold"
-                android:text="Transaction Details"
+                android:text="@string/transaction_details"
                 android:textColor="@color/black"
                 android:textSize="@dimen/_16ssp" />
         </LinearLayout>
@@ -77,7 +77,6 @@
                             android:layout_marginTop="@dimen/_22sdp"
                             android:layout_marginBottom="@dimen/_6sdp"
                             android:fontFamily="@font/opensans_semibold"
-                            android:text="Buy Tokens - Bank Account"
                             android:textColor="@color/black"
                             android:textSize="@dimen/_12ssp" />
 
@@ -92,7 +91,6 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:fontFamily="@font/opensans_bold"
-                                android:text="100.00"
                                 android:textColor="@color/primary_color"
                                 android:textSize="@dimen/_24ssp"
 
@@ -101,9 +99,9 @@
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_marginLeft="@dimen/_2sdp"
+                                android:layout_marginStart="@dimen/_2sdp"
                                 android:fontFamily="@font/opensans_bold"
-                                android:text="CYN"
+                                android:text="@string/cyn"
                                 android:textColor="@color/primary_color"
                                 android:textSize="@dimen/_11ssp"
 
@@ -131,12 +129,12 @@
                             >
 
                             <TextView
-                                android:layout_width="match_parent"
+                                android:layout_width="0dp"
                                 android:layout_height="wrap_content"
                                 android:layout_marginTop="@dimen/_8sdp"
                                 android:layout_weight="1"
                                 android:fontFamily="@font/opensans_regular"
-                                android:text="Status"
+                                android:text="@string/status"
                                 android:textColor="@color/dark_grey"
                                 android:textSize="@dimen/_11ssp" />
 
@@ -148,7 +146,6 @@
                                 android:background="@drawable/fill_grn_color_smallradius"
                                 android:fontFamily="@font/opensans_bold"
                                 android:gravity="center"
-                                android:text="Completed"
                                 android:textColor="@color/active_green"
                                 android:textSize="@dimen/_7ssp" />
 
@@ -168,7 +165,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
                                 android:fontFamily="@font/opensans_regular"
-                                android:text="Date &amp; Time"
+                                android:text="@string/date_amp_time"
                                 android:textColor="@color/dark_grey"
                                 android:textSize="@dimen/_11ssp" />
 
@@ -179,7 +176,6 @@
                                 android:layout_weight="1"
                                 android:fontFamily="@font/opensans_semibold"
                                 android:gravity="right"
-                                android:text="07/27/2020 10:36:14"
                                 android:textColor="@color/text_color"
                                 android:textSize="@dimen/_11ssp" />
                         </LinearLayout>
@@ -198,7 +194,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
                                 android:fontFamily="@font/opensans_regular"
-                                android:text="Purchase  Amount"
+                                android:text="@string/purchase_amount"
                                 android:textColor="@color/dark_grey"
                                 android:textSize="@dimen/_11ssp" />
 
@@ -209,7 +205,6 @@
                                 android:layout_weight="1"
                                 android:fontFamily="@font/opensans_semibold"
                                 android:gravity="right"
-                                android:text="100.00"
                                 android:textColor="@color/text_color"
                                 android:textSize="@dimen/_11ssp" />
                         </LinearLayout>
@@ -230,7 +225,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
                                 android:fontFamily="@font/opensans_regular"
-                                android:text="Processing Fee"
+                                android:text="@string/processing_fee"
                                 android:textColor="@color/dark_grey"
                                 android:textSize="@dimen/_11ssp" />
 
@@ -241,7 +236,6 @@
                                 android:layout_weight="1"
                                 android:fontFamily="@font/opensans_semibold"
                                 android:gravity="right"
-                                android:text="$1123243424234242.00"
                                 android:textColor="@color/text_color"
                                 android:textSize="@dimen/_11ssp" />
                         </LinearLayout>
@@ -255,7 +249,8 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:orientation="vertical"
-                                android:paddingLeft="@dimen/_11sdp"
+                                android:paddingStart="@dimen/_11sdp"
+                                android:paddingEnd="@dimen/_1sdp"
                                 android:paddingTop="@dimen/_8sdp"
                                 android:paddingBottom="@dimen/_12sdp"
 
@@ -263,10 +258,10 @@
 
                                 <TextView
                                     android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
+                                    android:layout_height="0dp"
                                     android:layout_weight="1"
                                     android:fontFamily="@font/opensans_regular"
-                                    android:text="Total Amount"
+                                    android:text="@string/total_amount"
                                     android:textColor="@color/dark_grey"
                                     android:textSize="@dimen/_11ssp" />
 
@@ -274,7 +269,7 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:fontFamily="@font/opensans_regular"
-                                    android:text="(Purchase Amount + Processing Fee)"
+                                    android:text="@string/purchase_amount_processing_fee"
                                     android:textColor="@color/dark_grey"
                                     android:textSize="@dimen/_10ssp" />
                             </LinearLayout>
@@ -288,7 +283,6 @@
                                 android:layout_weight="1"
                                 android:fontFamily="@font/opensans_semibold"
                                 android:gravity="right"
-                                android:text="$10144443252332.00"
                                 android:textColor="@color/text_color"
                                 android:textSize="@dimen/_11ssp" />
                         </LinearLayout>
@@ -318,11 +312,11 @@
                             android:paddingBottom="@dimen/_12sdp">
 
                             <TextView
-                                android:layout_width="match_parent"
+                                android:layout_width="0dp"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
                                 android:fontFamily="@font/opensans_regular"
-                                android:text="Deposit ID"
+                                android:text="@string/deposit_id"
                                 android:textColor="@color/dark_grey"
                                 android:textSize="@dimen/_11ssp" />
 
@@ -334,12 +328,11 @@
 
                                 <TextView
                                     android:id="@+id/btbankDepositIDTV"
-                                    android:layout_width="match_parent"
+                                    android:layout_width="0dp"
                                     android:layout_height="wrap_content"
                                     android:layout_weight="1"
                                     android:fontFamily="@font/opensans_semibold"
                                     android:gravity="right"
-                                    android:text="874jeM734h…"
                                     android:textColor="@color/text_color"
                                     android:textSize="@dimen/_11ssp" />
 
@@ -367,7 +360,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
                                 android:fontFamily="@font/opensans_regular"
-                                android:text="Reference ID"
+                                android:text="@string/reference_id"
                                 android:textColor="@color/dark_grey"
                                 android:textSize="@dimen/_11ssp" />
 
@@ -384,7 +377,6 @@
                                     android:layout_weight="1"
                                     android:fontFamily="@font/opensans_semibold"
                                     android:gravity="right"
-                                    android:text="1d3hsM734h…"
                                     android:textColor="@color/text_color"
                                     android:textSize="@dimen/_11ssp" />
 
@@ -412,7 +404,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
                                 android:fontFamily="@font/opensans_regular"
-                                android:text="Descriptor Name"
+                                android:text="@string/descriptor_name"
                                 android:textColor="@color/dark_grey"
                                 android:textSize="@dimen/_11ssp" />
 
@@ -422,8 +414,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
                                 android:fontFamily="@font/opensans_semibold"
-                                android:gravity="right"
-                                android:text="BUYTOKENCYN"
+                                android:gravity="end"
                                 android:textColor="@color/text_color"
                                 android:textSize="@dimen/_11ssp" />
                         </LinearLayout>
@@ -470,7 +461,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
                                 android:fontFamily="@font/opensans_semibold"
-                                android:gravity="right"
+                                android:gravity="end"
                                 android:text=""
                                 android:textColor="@color/text_color"
                                 android:textSize="@dimen/_11ssp" />
@@ -503,9 +494,8 @@
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
                                 android:fontFamily="@font/opensans_semibold"
-                                android:gravity="right"
+                                android:gravity="end"
                                 android:singleLine="true"
-                                android:text="Bank of America"
                                 android:textColor="@color/text_color"
                                 android:textSize="@dimen/_11ssp" />
                         </LinearLayout>
@@ -534,8 +524,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
                                 android:fontFamily="@font/opensans_semibold"
-                                android:gravity="right"
-                                android:text="...5359"
+                                android:gravity="end"
                                 android:textColor="@color/text_color"
                                 android:textSize="@dimen/_11ssp" />
                         </LinearLayout>
