--- a/app/src/main/res/layout/activity_dbainfo_details.xml
+++ b/app/src/main/res/layout/activity_dbainfo_details.xml
@@ -113,7 +113,7 @@
                                     android:layout_height="wrap_content"
                                     android:layout_gravity="center"
                                     android:fontFamily="@font/opensans_bold"
-                                    android:text="SS"
+                                    android:text=""
                                     android:textColor="@color/primary_black"
                                     android:textSize="@dimen/_20sdp"
                                     android:visibility="visible" />
@@ -139,7 +139,7 @@
                         android:layout_gravity="center"
                         android:layout_marginBottom="@dimen/_6sdp"
                         android:fontFamily="@font/opensans_bold"
-                        android:text="Fire BBQ"
+                        android:text=""
                         android:textColor="@color/primary_black"
                         android:textSize="@dimen/_16ssp" />
 
@@ -160,7 +160,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginStart="@dimen/_3sdp"
                             android:fontFamily="@font/opensans_semibold"
-                            android:text="www.firebbq.com"
+                            android:text=""
                             android:textColor="@color/primary_black"
                             android:textSize="@dimen/_12ssp" />
 
@@ -178,7 +178,8 @@
                         android:paddingTop="@dimen/_4sdp"
                         android:paddingEnd="@dimen/_9sdp"
                         android:paddingBottom="@dimen/_6sdp"
-                        android:text="Restaurants"
+                        android:text=""
+                        android:textAlignment="center"
                         android:textColor="@color/primary_black"
                         android:textSize="@dimen/_12ssp" />
                 </LinearLayout>
@@ -237,7 +238,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_marginBottom="@dimen/_7sdp"
                                 android:fontFamily="@font/opensans_semibold"
-                                android:text="support@firebbq.com"
+                                android:text=""
                                 android:textColor="@color/primary_black"
                                 android:textSize="@dimen/_12ssp" />
                         </LinearLayout>
@@ -281,7 +282,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_marginBottom="@dimen/_7sdp"
                                 android:fontFamily="@font/opensans_semibold"
-                                android:text="123-456-7890"
+                                android:text=""
                                 android:textColor="@color/primary_black"
                                 android:textSize="@dimen/_12ssp" />
                         </LinearLayout>
