--- a/app/src/main/res/layout/activity_transaction_details.xml
+++ b/app/src/main/res/layout/activity_transaction_details.xml
@@ -35,6 +35,11 @@
     <include
         android:id="@+id/buyTokenSignet"
         layout="@layout/buy_token_signet_tdetails"
-        android:visibility="visible"/>
+        android:visibility="gone"/>
+    <include
+        android:id="@+id/failedWithdrawBankAcc"
+        layout="@layout/activity_transaction_details_failed"
+        android:visibility="gone"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
