Beneficial Owners Changes

--- a/app/src/main/res/layout/activity_add_benificial_owner.xml
+++ b/app/src/main/res/layout/activity_add_benificial_owner.xml
@@ -68,6 +68,8 @@
             android:textSize="@dimen/_16ssp" />
     </LinearLayout>
 
+
+
     <com.greenbox.coyni.intro_slider.AutoScrollViewPager
         android:id="@+id/view_pager"
         android:layout_width="match_parent"
@@ -297,14 +299,14 @@
                     <RelativeLayout
                         android:id="@+id/IdveriDOBRL"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/_14sdp">
 
                         <com.google.android.material.textfield.TextInputLayout
                             android:id="@+id/IdveriDOBTIL"
                             style="@style/TextInputLayout.OutlinedBox"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="@dimen/_14sdp"
                             android:hint="@string/dobol"
                             android:textColorHint="@color/light_gray"
                             app:boxStrokeColor="@color/primary_green"
@@ -318,7 +320,7 @@
                                 android:focusable="false"
                                 android:focusableInTouchMode="false"
                                 android:fontFamily="@font/opensans_semibold"
-                                android:imeOptions="actionDone"
+                                android:imeOptions="actionNext"
                                 android:inputType="none"
                                 android:maxLength="30"
                                 android:paddingVertical="@dimen/_12sdp"
@@ -380,7 +382,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/opensans_semibold"
-                            android:imeOptions="actionDone"
+                            android:imeOptions="actionNext"
                             android:inputType="numberPassword"
                             android:maxLength="9"
                             android:paddingVertical="@dimen/_12sdp"
@@ -424,7 +426,6 @@
                         android:hint="@string/Ownership"
                         android:textColorHint="@color/light_gray"
                         app:boxStrokeColor="@color/primary_green"
-
                         app:hintTextColor="@color/primary_green">
 
                         <com.google.android.material.textfield.TextInputEditText
@@ -439,7 +440,8 @@
                             android:textColor="@color/text_color"
                             android:textColorHint="@color/light_gray"
                             android:textCursorDrawable="@drawable/cursor_green"
-                            android:textSize="@dimen/_12ssp" />
+                            android:textSize="@dimen/_12ssp"
+                            android:imeOptions="actionDone"/>
                     </com.google.android.material.textfield.TextInputLayout>
 
                     <LinearLayout
