--- a/app/src/main/res/layout/add_bank_created_sucessful.xml
+++ b/app/src/main/res/layout/add_bank_created_sucessful.xml
@@ -19,12 +19,22 @@
             android:paddingLeft="@dimen/_21sdp"
             android:paddingRight="@dimen/_21sdp">
 
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+            <LinearLayout
+                android:id="@+id/lySuccesslClose"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
                 android:layout_marginTop="@dimen/_42sdp"
                 android:layout_marginBottom="@dimen/_13sdp"
-                android:src="@drawable/ic_x" />
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+
+                    android:src="@drawable/ic_x" />
+            </LinearLayout>
+
 
             <ImageView
                 android:layout_width="wrap_content"
