--- a/app/src/main/res/layout/banklistitem.xml
+++ b/app/src/main/res/layout/banklistitem.xml
@@ -1,54 +1,86 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:swipe="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="@dimen/_48sdp"
     android:background="@color/white">
 
-    <ImageView
-        android:id="@+id/imgPayMethod"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:src="@drawable/ic_select_bank"></ImageView>
-
-    <LinearLayout
-        android:id="@+id/layoutBank"
+    <com.greenbox.coyni.utils.swipelayout.SwipeLayout
+        android:id="@+id/swipeLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_marginLeft="@dimen/_10sdp"
-        android:layout_toRightOf="@+id/imgPayMethod"
-        android:orientation="horizontal"
-        android:visibility="visible">
+        swipe:leftEdgeSwipeOffset="0dp"
+        swipe:rightEdgeSwipeOffset="0dp">
 
-        <TextView
-            android:id="@+id/tvBankName"
+        <LinearLayout
+            android:id="@+id/deleteLL"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:background="@color/notif_delete_bg">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_marginStart="@dimen/_15sdp"
+                android:layout_marginEnd="@dimen/_15sdp"
+                android:src="@drawable/ic_delete" />
+        </LinearLayout>
+
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.8"
-            android:fontFamily="@font/opensans_semibold"
-            android:singleLine="true"
-            android:text="Bank of America"
-            android:textColor="@color/primary_black"
-            android:textSize="@dimen/_12ssp"></TextView>
-
-        <TextView
-            android:id="@+id/tvAccount"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1.2"
-            android:fontFamily="@font/opensans_semibold"
-            android:text="••••5359"
-            android:textColor="@color/primary_black"
-            android:textSize="@dimen/_11ssp"></TextView>
-
-    </LinearLayout>
+            android:layout_height="wrap_content">
 
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="1dp"
-        android:background="@color/viewcolor"></View>
+            <ImageView
+                android:id="@+id/imgPayMethod"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:src="@drawable/ic_select_bank"></ImageView>
+
+            <LinearLayout
+                android:id="@+id/layoutBank"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="@dimen/_10sdp"
+                android:layout_toRightOf="@+id/imgPayMethod"
+                android:orientation="horizontal"
+                android:visibility="visible">
+
+                <TextView
+                    android:id="@+id/tvBankName"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.8"
+                    android:fontFamily="@font/opensans_semibold"
+                    android:singleLine="true"
+                    android:text="Bank of America"
+                    android:textColor="@color/primary_black"
+                    android:textSize="@dimen/_12ssp"></TextView>
+
+                <TextView
+                    android:id="@+id/tvAccount"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1.2"
+                    android:fontFamily="@font/opensans_semibold"
+                    android:text="••••5359"
+                    android:textColor="@color/primary_black"
+                    android:textSize="@dimen/_11ssp"></TextView>
+
+            </LinearLayout>
+
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_alignParentBottom="true"
+                android:layout_marginBottom="1dp"
+                android:background="@color/viewcolor"></View>
+        </RelativeLayout>
+
+    </com.greenbox.coyni.utils.swipelayout.SwipeLayout>
+
 </RelativeLayout>
